Improved the code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <nav class="nav-bar">
       <ul class="nav-menu">
-        <li class="nav-options logo">Ishaan Sharma</li>
+        <li class="nav-options logo">Alex Roarke</li>
         <li class="nav-options ">Services</li>
         <li class="nav-options ">Portfolio</li>
         <li class="nav-options ">About</li>
@@ -22,158 +22,41 @@
     <main class="middle">
       <div class="icon webdev">
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-        <svg id="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          preserveAspectRatio="xMidYMid meet" viewBox="-5 0 640 640" width="640" height="640">
+        <!-- Generator: Gravit.io --><svg id="logo" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" style="isolation:isolate" viewBox="0 0 424 375" width="424pt"
+          height="375pt">
           <defs>
-            <path
-              d="M251.99 423.24C255.75 405.38 285.85 262.49 289.61 244.63C290.67 239.59 295.62 236.37 300.66 237.43C305.7 238.49 308.93 243.43 307.87 248.48C304.1 266.34 274.01 409.23 270.25 427.09C269.32 431.48 265.45 434.49 261.13 434.49C260.49 434.49 259.85 434.43 259.2 434.29C254.16 433.23 250.93 428.28 251.99 423.24Z"
-              id="azzbF5wVu"></path>
-            <path
-              d="M251.99 423.24C255.75 405.38 285.85 262.49 289.61 244.63C290.67 239.59 295.62 236.37 300.66 237.43C305.7 238.49 308.93 243.43 307.87 248.48C304.1 266.34 274.01 409.23 270.25 427.09C269.32 431.48 265.45 434.49 261.13 434.49C260.49 434.49 259.85 434.43 259.2 434.29C254.16 433.23 250.93 428.28 251.99 423.24Z"
-              id="a1U9loakRf"></path>
-            <path
-              d="M156.52 342.32C154.44 340.54 153.24 337.95 153.24 335.21C153.24 332.48 154.45 329.89 156.52 328.11C162.56 322.97 210.85 281.86 216.88 276.72C220.8 273.38 226.69 273.85 230.03 277.77C233.37 281.69 232.9 287.58 228.97 290.92C225.51 293.87 208.17 308.64 176.96 335.21C208.17 361.79 225.51 376.56 228.97 379.51C232.9 382.85 233.37 388.74 230.03 392.66C228.18 394.83 225.56 395.94 222.92 395.94C220.79 395.94 218.64 395.21 216.88 393.72C210.85 388.58 162.56 347.46 156.52 342.32Z"
-              id="b1yUHML1w8"></path>
-            <path
-              d="M156.52 342.32C154.44 340.54 153.24 337.95 153.24 335.21C153.24 332.48 154.45 329.89 156.52 328.11C162.56 322.97 210.85 281.86 216.88 276.72C220.8 273.38 226.69 273.85 230.03 277.77C233.37 281.69 232.9 287.58 228.97 290.92C225.51 293.87 208.17 308.64 176.96 335.21C208.17 361.79 225.51 376.56 228.97 379.51C232.9 382.85 233.37 388.74 230.03 392.66C228.18 394.83 225.56 395.94 222.92 395.94C220.79 395.94 218.64 395.21 216.88 393.72C210.85 388.58 162.56 347.46 156.52 342.32Z"
-              id="bct3Gxvb6"></path>
-            <path
-              d="M336.03 379.51C339.49 376.56 356.83 361.79 388.04 335.21C356.83 308.64 339.49 293.87 336.03 290.92C332.11 287.58 331.63 281.69 334.97 277.77C338.31 273.85 344.2 273.38 348.12 276.72C354.15 281.86 402.44 322.97 408.48 328.11C410.56 329.89 411.76 332.48 411.76 335.21C411.76 337.95 410.56 340.54 408.48 342.32C402.44 347.46 354.15 388.58 348.12 393.72C346.36 395.21 344.21 395.94 342.08 395.94C339.44 395.94 336.82 394.83 334.97 392.66C331.63 388.74 332.11 382.85 336.03 379.51Z"
-              id="a3aVZZx7B8"></path>
-            <path
-              d="M336.03 379.51C339.49 376.56 356.83 361.79 388.04 335.21C356.83 308.64 339.49 293.87 336.03 290.92C332.11 287.58 331.63 281.69 334.97 277.77C338.31 273.85 344.2 273.38 348.12 276.72C354.15 281.86 402.44 322.97 408.48 328.11C410.56 329.89 411.76 332.48 411.76 335.21C411.76 337.95 410.56 340.54 408.48 342.32C402.44 347.46 354.15 388.58 348.12 393.72C346.36 395.21 344.21 395.94 342.08 395.94C339.44 395.94 336.82 394.83 334.97 392.66C331.63 388.74 332.11 382.85 336.03 379.51Z"
-              id="g1baWAD9hz"></path>
-            <path
-              d="M0 469.17C0 431.85 0 133.27 0 95.94C0 61.41 28.1 33.31 62.63 33.31C106.6 33.31 458.4 33.31 502.37 33.31C536.9 33.31 565 61.41 565 95.94C565 133.27 565 431.85 565 469.17C565 503.71 536.9 531.8 502.37 531.8C414.42 531.8 106.6 531.8 62.63 531.8C28.1 531.8 0 503.71 0 469.17ZM18.66 95.94C18.66 133.27 18.66 431.85 18.66 469.17C18.66 493.42 38.38 513.15 62.63 513.15C106.6 513.15 458.4 513.15 502.37 513.15C526.62 513.15 546.34 493.42 546.34 469.17C546.34 431.85 546.34 133.27 546.34 95.94C546.34 71.7 526.62 51.97 502.37 51.97C414.42 51.97 150.58 51.97 62.63 51.97C38.38 51.97 18.66 71.7 18.66 95.94Z"
-              id="bJvmHJKsd"></path>
-            <path
-              d="M0 469.17C0 431.85 0 133.27 0 95.94C0 61.41 28.1 33.31 62.63 33.31C106.6 33.31 458.4 33.31 502.37 33.31C536.9 33.31 565 61.41 565 95.94C565 133.27 565 431.85 565 469.17C565 503.71 536.9 531.8 502.37 531.8C414.42 531.8 106.6 531.8 62.63 531.8C28.1 531.8 0 503.71 0 469.17ZM18.66 95.94C18.66 133.27 18.66 431.85 18.66 469.17C18.66 493.42 38.38 513.15 62.63 513.15C106.6 513.15 458.4 513.15 502.37 513.15C526.62 513.15 546.34 493.42 546.34 469.17C546.34 431.85 546.34 133.27 546.34 95.94C546.34 71.7 526.62 51.97 502.37 51.97C414.42 51.97 150.58 51.97 62.63 51.97C38.38 51.97 18.66 71.7 18.66 95.94Z"
-              id="c3aIkNHgd"></path>
-            <path
-              d="M159.37 79.01C175.65 79.01 188.89 92.25 188.89 108.52C188.89 124.8 175.65 138.04 159.37 138.04C143.1 138.04 129.86 124.8 129.86 108.52C129.86 92.25 143.1 79.01 159.37 79.01ZM159.37 119.39C165.37 119.39 170.24 114.52 170.24 108.52C170.24 102.53 165.37 97.66 159.37 97.66C153.39 97.66 148.51 102.53 148.51 108.52C148.51 114.52 153.39 119.39 159.37 119.39Z"
-              id="k1sp73Z0hh"></path>
-            <path
-              d="M159.37 79.01C175.65 79.01 188.89 92.25 188.89 108.52C188.89 124.8 175.65 138.04 159.37 138.04C143.1 138.04 129.86 124.8 129.86 108.52C129.86 92.25 143.1 79.01 159.37 79.01ZM159.37 119.39C165.37 119.39 170.24 114.52 170.24 108.52C170.24 102.53 165.37 97.66 159.37 97.66C153.39 97.66 148.51 102.53 148.51 108.52C148.51 114.52 153.39 119.39 159.37 119.39Z"
-              id="dfJPHh5x5"></path>
-            <path
-              d="M68.68 78.72C84.96 78.72 98.2 91.96 98.2 108.24C98.2 124.52 84.96 137.76 68.68 137.76C52.4 137.76 39.16 124.52 39.16 108.24C39.16 91.96 52.4 78.72 68.68 78.72ZM68.68 119.1C74.67 119.1 79.54 114.23 79.54 108.24C79.54 102.25 74.67 97.37 68.68 97.37C62.69 97.37 57.81 102.25 57.81 108.24C57.81 114.23 62.69 119.1 68.68 119.1Z"
-              id="a11Hf1WsCR"></path>
-            <path
-              d="M68.68 78.72C84.96 78.72 98.2 91.96 98.2 108.24C98.2 124.52 84.96 137.76 68.68 137.76C52.4 137.76 39.16 124.52 39.16 108.24C39.16 91.96 52.4 78.72 68.68 78.72ZM68.68 119.1C74.67 119.1 79.54 114.23 79.54 108.24C79.54 102.25 74.67 97.37 68.68 97.37C62.69 97.37 57.81 102.25 57.81 108.24C57.81 114.23 62.69 119.1 68.68 119.1Z"
-              id="aiMMoJSY4"></path>
-            <path
-              d="M250.07 79.29C266.35 79.29 279.59 92.53 279.59 108.81C279.59 125.08 266.35 138.32 250.07 138.32C233.8 138.32 220.56 125.08 220.56 108.81C220.56 92.53 233.8 79.29 250.07 79.29ZM250.07 119.67C256.06 119.67 260.93 114.8 260.93 108.81C260.93 102.81 256.06 97.94 250.07 97.94C244.09 97.94 239.21 102.81 239.21 108.81C239.21 114.8 244.09 119.67 250.07 119.67Z"
-              id="aZNLAWhG"></path>
-            <path
-              d="M250.07 79.29C266.35 79.29 279.59 92.53 279.59 108.81C279.59 125.08 266.35 138.32 250.07 138.32C233.8 138.32 220.56 125.08 220.56 108.81C220.56 92.53 233.8 79.29 250.07 79.29ZM250.07 119.67C256.06 119.67 260.93 114.8 260.93 108.81C260.93 102.81 256.06 97.94 250.07 97.94C244.09 97.94 239.21 102.81 239.21 108.81C239.21 114.8 244.09 119.67 250.07 119.67Z"
-              id="awOnMisuR"></path>
-            <path d="M18.62 164L546.58 163.97L546.58 182.48L18.63 182.52L18.62 164Z" id="ahRzhDnsI"></path>
+            <clipPath id="_clipPath_lwAqZUrni2x2kQ9WllbQ3hZW4oZchZf4">
+              <rect width="424" height="375" />
+            </clipPath>
           </defs>
-          <g>
-            <g>
-              <g>
-                <use xlink:href="#azzbF5wVu" opacity="1" fill="#7e7e7e" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#azzbF5wVu" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#a1U9loakRf" opacity="1" fill="#000000" fill-opacity="0"></use>
-                <g>
-                  <use xlink:href="#a1U9loakRf" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#b1yUHML1w8" opacity="1" fill="#db4747" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#b1yUHML1w8" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#bct3Gxvb6" opacity="1" fill="#000000" fill-opacity="0"></use>
-                <g>
-                  <use xlink:href="#bct3Gxvb6" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#a3aVZZx7B8" opacity="1" fill="#db4747" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#a3aVZZx7B8" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#g1baWAD9hz" opacity="1" fill="#000000" fill-opacity="0"></use>
-                <g>
-                  <use xlink:href="#g1baWAD9hz" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#bJvmHJKsd" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#bJvmHJKsd" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#c3aIkNHgd" opacity="1" fill="#ffffff" fill-opacity="0.86"></use>
-                <g>
-                  <use xlink:href="#c3aIkNHgd" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#k1sp73Z0hh" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#k1sp73Z0hh" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#dfJPHh5x5" opacity="1" fill="#000000" fill-opacity="0"></use>
-                <g>
-                  <use xlink:href="#dfJPHh5x5" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#a11Hf1WsCR" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#a11Hf1WsCR" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#aiMMoJSY4" opacity="1" fill="#000000" fill-opacity="0"></use>
-                <g>
-                  <use xlink:href="#aiMMoJSY4" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#aZNLAWhG" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-                <g>
-                  <use xlink:href="#aZNLAWhG" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0">
-                  </use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#awOnMisuR" opacity="1" fill="#000000" fill-opacity="0"></use>
-                <g>
-                  <use xlink:href="#awOnMisuR" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1"
-                    stroke-opacity="0"></use>
-                </g>
-              </g>
-              <g>
-                <use xlink:href="#ahRzhDnsI" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-              </g>
+          <g clip-path="url(#_clipPath_lwAqZUrni2x2kQ9WllbQ3hZW4oZchZf4)">
+            <path class="grey-fill"
+              d=" M 195.965 302.063 C 195.484 302.063 195 302.012 194.512 301.91 C 190.73 301.113 188.309 297.398 189.105 293.617 L 217.336 159.582 C 218.133 155.801 221.844 153.379 225.629 154.176 C 229.41 154.973 231.832 158.684 231.035 162.469 L 202.805 296.504 C 202.109 299.801 199.203 302.063 195.965 302.063 L 195.965 302.063 Z "
+              fill="rgb(190, 190, 190)" fill-opacity="0.68" />
+            <g class="red-fill" style="isolation:isolate">
+              <path
+                d=" M 256.711 273.133 C 254.73 273.133 252.762 272.297 251.379 270.668 C 248.871 267.727 249.227 263.309 252.168 260.801 L 291.203 227.559 L 252.168 194.316 C 249.227 191.813 248.871 187.395 251.379 184.449 C 253.883 181.508 258.305 181.152 261.242 183.66 L 306.539 222.23 C 308.102 223.563 309 225.508 309 227.559 C 309 229.613 308.102 231.559 306.539 232.891 L 261.242 271.461 C 259.926 272.582 258.313 273.133 256.711 273.133 L 256.711 273.133 Z "
+                fill="rgb(224,53,53)" />
+              <path
+                d=" M 167.289 273.133 C 165.688 273.133 164.074 272.582 162.758 271.461 L 117.461 232.891 C 115.898 231.559 115 229.613 115 227.559 C 115 225.508 115.902 223.563 117.461 222.23 L 162.758 183.66 C 165.699 181.152 170.117 181.508 172.625 184.449 C 175.129 187.395 174.777 191.813 171.832 194.316 L 132.797 227.559 L 171.832 260.801 C 174.777 263.309 175.129 267.727 172.625 270.668 C 171.238 272.297 169.27 273.133 167.289 273.133 Z "
+                fill="rgb(224,53,53)" />
+            </g>
+            <g class="white-fill" style="isolation:isolate">
+              <path
+                d=" M 51.539 79.379 C 39.324 79.379 29.387 69.441 29.387 57.227 C 29.387 45.012 39.324 35.074 51.539 35.074 C 63.754 35.074 73.691 45.012 73.691 57.227 C 73.691 69.441 63.754 79.379 51.539 79.379 Z  M 51.539 49.074 C 47.047 49.074 43.387 52.734 43.387 57.227 C 43.387 61.723 47.047 65.379 51.539 65.379 C 56.035 65.379 59.691 61.723 59.691 57.227 C 59.691 52.734 56.035 49.074 51.539 49.074 Z "
+                fill="rgb(255,255,255)" />
+              <path
+                d=" M 119.602 79.594 C 107.391 79.594 97.449 69.652 97.449 57.441 C 97.449 45.227 107.391 35.289 119.602 35.289 C 131.816 35.289 141.754 45.227 141.754 57.441 C 141.754 69.652 131.816 79.594 119.602 79.594 Z  M 119.602 49.289 C 115.109 49.289 111.449 52.945 111.449 57.441 C 111.449 61.938 115.109 65.594 119.602 65.594 C 124.098 65.594 127.754 61.938 127.754 57.441 C 127.754 52.945 124.098 49.289 119.602 49.289 Z "
+                fill="rgb(255,255,255)" />
+              <path
+                d=" M 187.664 79.805 C 175.453 79.805 165.516 69.867 165.516 57.652 C 165.516 45.441 175.453 35.504 187.664 35.504 C 199.879 35.504 209.816 45.441 209.816 57.652 C 209.816 69.867 199.879 79.805 187.664 79.805 Z  M 187.664 49.5 C 183.172 49.5 179.516 53.156 179.516 57.652 C 179.516 62.148 183.172 65.805 187.664 65.805 C 192.16 65.805 195.816 62.148 195.816 57.652 C 195.816 53.156 192.16 49.5 187.664 49.5 Z "
+                fill="rgb(255,255,255)" />
+              <rect x="14" y="104.09" width="396.2" height="14" transform="matrix(1,0,0,1,0,0)"
+                fill="rgb(255,255,255)" />
+              <path
+                d=" M 377 375.086 L 47 375.086 C 21.086 375.086 0 354.004 0 328.086 L 0 48 C 0 22.086 21.086 1 47 1 L 377 1 C 402.914 1 424 22.086 424 48 L 424 328.086 C 424 354.004 402.914 375.086 377 375.086 Z  M 47 15 C 28.805 15 14 29.805 14 48 L 14 328.086 C 14 346.281 28.805 361.086 47 361.086 L 377 361.086 C 395.195 361.086 410 346.281 410 328.086 L 410 48 C 410 29.805 395.195 15 377 15 L 47 15 Z "
+                fill="rgb(255,255,255)" />
             </g>
           </g>
         </svg>
@@ -181,7 +64,7 @@
   </div>
 
   <div class="left-side">
-    <h1>Hello, I'm <span class="name">Ishaan Sharma</span>. <br> I'm a full-stack <br> web developer.
+    <h1>Hello, I'm <span class="name">Alex Roarke</span>. <br> I'm a full-stack <br> web developer.
     </h1>
     <button class="main-btn"><i class="fas fa-code"></i>View my work</button>
     <button class="main-btn"><i class="fab fa-github"></i>Check my GitHub</button>
